@@ -2,6 +2,10 @@
   ChangeLog for the spinning_mcmc repository.  
   Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
 
+   143: sluys, 13/04/2009
+     - store duplicate of best parameter values (parBestVal) as injection values
+       (injParVal) and prior_tc_mean in case of no SW injection
+     
    140: sluys, 10/04/2009
      - removed the waveform_*.c files from the repository (still have a backup)
    
